Basic version of cpp addon

--- a/test/index.html
+++ b/test/index.html
@@ -39,11 +39,11 @@
             </div>
             <div>
                 <h4>Windows</h4>
-                <button data-platform="win32" onclick="native.swift.helloGui()">C++</button>
+                <button data-platform="win32" onclick="native.cppWin32.helloGui()">C++</button>
             </div>
             <div>
                 <h4>Linux</h4>
-                <button data-platform="linux" onclick="native.swift.helloGui()">C++</button>
+                <button data-platform="linux" onclick="native.cppLinux.helloGui()">C++</button>
             </div>
         </div>
     </div>
